...
    },
    "古迹图鉴" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Monument Catalog"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "古跡図鑑"
          }
        }
      }
    },
    "另有 %lld 处未在图中列出" : {
      "localizations" : {
...
    },
    "搜索古迹、地点或时代" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search monuments, places or periods"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "古跡・場所・時代を検索"
          }
        }
      }
    },
    "搜索地点、省份或古迹" : {
      "localizations" : {
...
